@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -33,6 +33,7 @@
 import java.lang.ref.Reference;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.locks.LockSupport;
 
 public class DynamicCodeGeneratedTest {
     static {
@@ -49,14 +50,21 @@ public class DynamicCodeGeneratedTest {
         threadChangeENM.setDaemon(true);
         threadChangeENM.start();
 
+        Runnable task = () -> {
+            String result = "string" + System.currentTimeMillis();
+            // Park to provoke re-mounting of virtual thread.
+            LockSupport.parkNanos(1);
+            Reference.reachabilityFence(result);
+        };
+
         for (int i = 0; i < 10; i++) {
             List<Thread> threads = new ArrayList();
             for (int j = 0; j < 200; j++) {
-                Thread t = new Thread(() -> {
-                        String result = "string" + System.currentTimeMillis();
-                        Reference.reachabilityFence(result);
-                });
-                threads.add(t);
+                threads.add(Thread.ofVirtual().unstarted(task));
+                threads.add(Thread.ofPlatform().unstarted(task));
+            }
+
+            for (Thread t: threads) {
                 t.start();
             }
             for (Thread t: threads) {
