@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,7 +24,7 @@
 package org.openjdk.foreigntest;
 
 import java.lang.foreign.*;
-import java.lang.foreign.SegmentScope;
+import java.lang.foreign.Arena;
 
 public class PanamaMainDirect {
     public static void main(String[] args) {
@@ -33,14 +33,14 @@ public class PanamaMainDirect {
     }
 
     public static void testDirectAccessCLinker() {
-        System.out.println("Trying to get Linker");
-        Linker.nativeLinker();
-        System.out.println("Got Linker");
+        System.out.println("Trying to obtain a downcall handle");
+        Linker.nativeLinker().downcallHandle(FunctionDescriptor.ofVoid());
+        System.out.println("Got downcall handle");
    }
 
     public static void testDirectAccessMemorySegment() {
         System.out.println("Trying to get MemorySegment");
-        MemorySegment.ofAddress(0, 4000, SegmentScope.global());
+        MemorySegment.NULL.reinterpret(10);
         System.out.println("Got MemorySegment");
    }
 }
