@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2005, 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2005, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -30,13 +30,19 @@
  *
  * @run clean ThreadPoolAccTest
  * @run build ThreadPoolAccTest
- * @run main ThreadPoolAccTest
+ *
+ * @run main/othervm ThreadPoolAccTest
+ * @run main/othervm -Djava.security.manager=allow ThreadPoolAccTest
+ * @run main/othervm -Djava.security.manager=allow -DThreadPoolAccTest.useGetSubjectACC=true ThreadPoolAccTest
+ * @run main/othervm/policy=all.policy ThreadPoolAccTest
+ * @run main/othervm/policy=all.policy -DThreadPoolAccTest.useGetSubjectACC=true ThreadPoolAccTest
  */
 
 import java.security.AccessController;
 import java.security.PrivilegedAction;
 import java.util.Date;
 import java.util.Set;
+import java.util.concurrent.Callable;
 import javax.management.MBeanServer;
 import javax.management.MBeanServerFactory;
 import javax.management.ObjectName;
@@ -48,6 +54,8 @@ import javax.management.remote.JMXPrincipal;
 import javax.security.auth.Subject;
 
 public class ThreadPoolAccTest {
+
+    public static final int MAX_TRIES = 30;
 
     // MBean class
     public static class ObservedObject implements ObservedObjectMBean {
@@ -65,7 +73,9 @@ public class ThreadPoolAccTest {
             return "";
         }
         private void setPrincipal() {
-            Subject subject = Subject.getSubject(AccessController.getContext());
+            // Use Subject.current() unless test Property is set.
+            Subject subject = Boolean.getBoolean("ThreadPoolAccTest.useGetSubjectACC") ?
+                              Subject.getSubject(AccessController.getContext()) : Subject.current();
             Set<JMXPrincipal> principals = subject.getPrincipals(JMXPrincipal.class);
             principal = principals.iterator().next().getName();
         }
@@ -134,11 +144,23 @@ public class ThreadPoolAccTest {
                         return null;
                     }
                 };
-                Subject.doAs(subject, action);
+                // Subject.doAs(subject, action);
+                Callable<Void> c = (Callable<Void>) () -> action.run();
+                Subject.callAs(subject, c);
             }
 
-            while(!testPrincipals(monitored, monitorNames, monitor, principals));
-
+            sleep(500); // wait for getX method to be called, which calls setPrincipal
+            boolean ok = false;
+            for (int i = 0; i < MAX_TRIES; i++) {
+                ok = testPrincipals(monitored, monitorNames, monitor, principals);
+                if (ok) {
+                    break;
+                }
+                sleep(1000);
+            }
+            if (!ok) {
+                throw new Exception("Failed: testPrincipals fails repeatedly.");
+            }
         } finally {
             for (int i = 0; i < 6; i++)
                 if (monitor[i] != null)
@@ -151,6 +173,9 @@ public class ThreadPoolAccTest {
         for (int i = 0; i < 6; i++) {
             String principal =  monitored[i].principal;
             String expected = principals[i / 3];
+
+            echo("testPrincipals: monitored: " + monitored[i] + " principal: " + principal + " expected: " + expected);
+
             if (principal == null) {
                 echo("Task not submitted " + new Date() + ". RETRY");
                 return false;
@@ -172,4 +197,12 @@ public class ThreadPoolAccTest {
     private static void echo(String message) {
         System.out.println(message);
     }
+
+    public static void sleep(int ms) {
+        try {
+            Thread.currentThread().sleep(ms);
+        } catch (InterruptedException ie) {
+            // ignore
+        }
+   }
 }
