@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -46,7 +46,7 @@ public class TestGetSettings {
 
         // test immutability
         try {
-            settings.add(settings.get(0));
+            settings.add(settings.getFirst());
             Asserts.fail("Should not be able to modify list returned by getSettings()");
         } catch (UnsupportedOperationException uoe) {
             // OK, as expected
