@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -126,7 +126,7 @@ public class TestRecordingCopy {
         Events.hasEvents(recordedEvents);
         Asserts.assertEquals(1, recordedEvents.size(), "Expected exactly one event");
 
-        RecordedEvent re = recordedEvents.get(0);
+        RecordedEvent re = recordedEvents.getFirst();
         Asserts.assertEquals(EVENT_ID, re.getValue("id"));
     }
 
