@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -60,7 +58,7 @@ public class TestSystemGC {
 
             Asserts.assertEquals(3, events.size(), "Expected 3 SystemGC events");
 
-            RecordedEvent event1 = events.get(0);
+            RecordedEvent event1 = events.getFirst();
             Events.assertFrame(event1, System.class, "gc");
             Events.assertEventThread(event1, Thread.currentThread());
             Events.assertField(event1, "invokedConcurrent").isEqual(concurrent);
