@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -58,7 +58,7 @@ public class TestSnapshot {
                 r.close();
                 FlightRecorderMXBean mxBean = JmxHelper.getFlighteRecorderMXBean();
                 List<RecordingInfo> recs = mxBean.getRecordings();
-                JmxHelper.verifyEquals(recs.get(0), snapshot);
+                JmxHelper.verifyEquals(recs.getFirst(), snapshot);
             }
         }
     }
@@ -67,7 +67,7 @@ public class TestSnapshot {
         try (Recording snapshot = FlightRecorder.getFlightRecorder().takeSnapshot()) {
             FlightRecorderMXBean mxBean = JmxHelper.getFlighteRecorderMXBean();
             List<RecordingInfo> recs = mxBean.getRecordings();
-            JmxHelper.verifyEquals(recs.get(0), snapshot);
+            JmxHelper.verifyEquals(recs.getFirst(), snapshot);
         }
     }
 }
