@@ -21,9 +21,9 @@
  * questions.
  */
 
+// key: compiler.err.feature.not.supported.in.source.plural
 // key: compiler.misc.feature.pattern.switch
-// key: compiler.warn.preview.feature.use.plural
-// options: --enable-preview -source ${jdk.version} -Xlint:preview
+// options: -source 20 -Xlint:-options
 
 class PatternSwitch {
     private void doSwitch(Object o) {
