@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2022, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -24,29 +22,22 @@
  */
 package org.openjdk.bench.jdk.classfile;
 
-import jdk.internal.classfile.AccessFlags;
 import java.lang.reflect.AccessFlag;
-import jdk.internal.classfile.Classfile;
-import jdk.internal.classfile.TypeKind;
-import jdk.internal.classfile.attribute.SourceFileAttribute;
+import java.lang.classfile.ClassFile;
+import java.lang.classfile.attribute.SourceFileAttribute;
 import jdk.internal.org.objectweb.asm.*;
 import org.openjdk.jmh.annotations.*;
-
 import java.io.FileOutputStream;
-import java.lang.constant.ClassDesc;
+import static java.lang.classfile.ClassFile.ACC_PUBLIC;
+import static java.lang.classfile.ClassFile.ACC_STATIC;
 import static java.lang.constant.ConstantDescs.*;
-import java.lang.constant.MethodTypeDesc;
+
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
-import static org.openjdk.bench.jdk.classfile.TestConstants.CD_PrintStream;
-import static org.openjdk.bench.jdk.classfile.TestConstants.CD_System;
-import static org.openjdk.bench.jdk.classfile.TestConstants.MTD_INT_VOID;
-import static org.openjdk.bench.jdk.classfile.TestConstants.MTD_VOID;
-import static jdk.internal.classfile.Opcode.*;
-import static jdk.internal.classfile.TypeKind.*;
-import static jdk.internal.classfile.TypeKind.IntType;
-import static jdk.internal.org.objectweb.asm.Opcodes.V12;
+import static java.lang.classfile.Opcode.*;
+import static java.lang.classfile.TypeKind.*;
+import static org.openjdk.bench.jdk.classfile.TestConstants.*;
 
 /**
  * Write
@@ -65,8 +56,21 @@ import static jdk.internal.org.objectweb.asm.Opcodes.V12;
  */
 @Warmup(iterations = 3)
 @Measurement(iterations = 5)
-@Fork(1)
+@Fork(value = 1, jvmArgsAppend = {
+        "--add-exports", "java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED",
+        "--add-exports", "java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED",
+        "--enable-preview",
+        "--add-exports", "java.base/jdk.internal.classfile.impl=ALL-UNNAMED"})
 public class Write {
+    static final int REPEATS = 40;
+    static final String[] METHOD_NAMES;
+    static {
+        var names = new String[REPEATS];
+        for (int xi = 0; xi < REPEATS; ++xi) {
+            names[xi] = "main" + ((xi == 0) ? "" : "" + xi);
+        }
+        METHOD_NAMES = names;
+    }
     static String checkFileAsm = "/tmp/asw/MyClass.class";
     static String checkFileBc = "/tmp/byw/MyClass.class";
     static boolean writeClassAsm = Files.exists(Paths.get(checkFileAsm).getParent());
@@ -77,17 +81,17 @@ public class Write {
     @BenchmarkMode(Mode.Throughput)
     public byte[] asmStream() {
         ClassWriter cw = new ClassWriter(ClassWriter.COMPUTE_FRAMES);
-        cw.visit(V12, Opcodes.ACC_PUBLIC, "MyClass", null, "java/lang/Object", null);
+        cw.visit(Opcodes.V12, Opcodes.ACC_PUBLIC, "MyClass", null, "java/lang/Object", null);
         cw.visitSource("MyClass.java", null);
 
         {
-            MethodVisitor mv = cw.visitMethod(0, "<init>", "()V", null, null);
+            MethodVisitor mv = cw.visitMethod(0, INIT_NAME, "()V", null, null);
             mv.visitCode();
             Label startLabel = new Label();
             Label endLabel = new Label();
             mv.visitLabel(startLabel);
             mv.visitVarInsn(Opcodes.ALOAD, 0);
-            mv.visitMethodInsn(Opcodes.INVOKESPECIAL, "java/lang/Object", "<init>", "()V", false);
+            mv.visitMethodInsn(Opcodes.INVOKESPECIAL, "java/lang/Object", INIT_NAME, "()V", false);
             mv.visitInsn(Opcodes.RETURN);
             mv.visitLabel(endLabel);
             mv.visitLocalVariable("this", "LMyClass;", null, startLabel, endLabel, 1);
@@ -95,8 +99,8 @@ public class Write {
             mv.visitEnd();
         }
 
-        for (int xi = 0; xi < 40; ++xi) {
-            MethodVisitor mv = cw.visitMethod(Opcodes.ACC_PUBLIC+Opcodes.ACC_STATIC, "main"+ ((xi==0)? "" : ""+xi), "([Ljava/lang/String;)V", null, null);
+        for (int xi = 0; xi < REPEATS; ++xi) {
+            MethodVisitor mv = cw.visitMethod(Opcodes.ACC_PUBLIC+Opcodes.ACC_STATIC, METHOD_NAMES[xi], "([Ljava/lang/String;)V", null, null);
             mv.visitCode();
             Label loopTop = new Label();
             Label loopEnd = new Label();
@@ -141,91 +145,43 @@ public class Write {
     @BenchmarkMode(Mode.Throughput)
     public byte[] jdkTree() {
 
-        byte[] bytes = Classfile.build(ClassDesc.of("MyClass"), cb -> {
+        byte[] bytes = ClassFile.of().build(CD_MyClass, cb -> {
             cb.withFlags(AccessFlag.PUBLIC);
             cb.withVersion(52, 0);
             cb.with(SourceFileAttribute.of(cb.constantPool().utf8Entry(("MyClass.java"))))
-              .withMethod("<init>", MethodTypeDesc.of(CD_void), 0, mb -> mb
-                      .withCode(codeb -> codeb.loadInstruction(TypeKind.ReferenceType, 0)
-                                              .invokeInstruction(INVOKESPECIAL, CD_Object, "<init>", MTD_VOID, false)
-                                              .returnInstruction(VoidType)
+              .withMethod(INIT_NAME, MTD_void, 0, mb -> mb
+                      .withCode(codeb -> codeb.aload(0)
+                                              .invokespecial(CD_Object, INIT_NAME, MTD_void)
+                                              .return_()
                       )
               );
-            for (int xi = 0; xi < 40; ++xi) {
-                cb.withMethod("main" + ((xi == 0) ? "" : "" + xi), MethodTypeDesc.of(CD_void, CD_String.arrayType()),
-                              AccessFlags.ofMethod(AccessFlag.STATIC, AccessFlag.PUBLIC).flagsMask(),
+            for (int xi = 0; xi < REPEATS; ++xi) {
+                cb.withMethod(METHOD_NAMES[xi], MTD_void_StringArray,
+                              ACC_PUBLIC | ACC_STATIC,
                               mb -> mb.withCode(c0 -> {
-                                  jdk.internal.classfile.Label loopTop = c0.newLabel();
-                                  jdk.internal.classfile.Label loopEnd = c0.newLabel();
+                                  java.lang.classfile.Label loopTop = c0.newLabel();
+                                  java.lang.classfile.Label loopEnd = c0.newLabel();
                                   int vFac = 1;
                                   int vI = 2;
-                                  c0.constantInstruction(ICONST_1, 1)         // 0
-                                    .storeInstruction(IntType, vFac)        // 1
-                                    .constantInstruction(ICONST_1, 1)         // 2
-                                    .storeInstruction(IntType, vI)          // 3
+                                  c0.iconst_1()         // 0
+                                    .istore(vFac)       // 1
+                                    .iconst_1()         // 2
+                                    .istore(vI)         // 3
                                     .labelBinding(loopTop)
-                                    .loadInstruction(IntType, vI)           // 4
-                                    .constantInstruction(BIPUSH, 10)         // 5
-                                    .branchInstruction(IF_ICMPGE, loopEnd) // 6
-                                    .loadInstruction(IntType, vFac)         // 7
-                                    .loadInstruction(IntType, vI)           // 8
-                                    .operatorInstruction(IMUL)             // 9
-                                    .storeInstruction(IntType, vFac)        // 10
-                                    .incrementInstruction(vI, 1)    // 11
-                                    .branchInstruction(GOTO, loopTop)     // 12
+                                    .iload(vI)          // 4
+                                    .bipush(10)         // 5
+                                    .if_icmpge(loopEnd) // 6
+                                    .iload(vFac)        // 7
+                                    .iload(vI)          // 8
+                                    .imul()             // 9
+                                    .istore(vFac)       // 10
+                                    .iinc(vI, 1)        // 11
+                                    .goto_(loopTop)     // 12
                                     .labelBinding(loopEnd)
-                                    .fieldInstruction(GETSTATIC, CD_System, "out", CD_PrintStream)   // 13
-                                    .loadInstruction(IntType, vFac)
-                                    .invokeInstruction(INVOKEVIRTUAL, CD_PrintStream, "println", MTD_INT_VOID, false)  // 15
-                                    .returnInstruction(VoidType);
-                        }));
-            }
-        });
-        if (writeClassBc) writeClass(bytes, checkFileBc);
-        return bytes;
-    }
-
-    @Benchmark
-    @BenchmarkMode(Mode.Throughput)
-    public byte[] jdkTreePrimitive() {
-
-        byte[] bytes = Classfile.build(ClassDesc.of("MyClass"), cb -> {
-            cb.withFlags(AccessFlag.PUBLIC);
-            cb.withVersion(52, 0);
-            cb.with(SourceFileAttribute.of(cb.constantPool().utf8Entry(("MyClass.java"))))
-              .withMethod("<init>", MethodTypeDesc.of(CD_void), 0,
-                          mb -> mb.withCode(codeb -> codeb.loadInstruction(ReferenceType, 0)
-                                                          .invokeInstruction(INVOKESPECIAL, CD_Object, "<init>", MTD_VOID, false)
-                                                          .returnInstruction(VoidType)
-                          )
-              );
-            for (int xi = 0; xi < 40; ++xi) {
-                cb.withMethod("main" + ((xi == 0) ? "" : "" + xi), MethodTypeDesc.of(CD_void, CD_String.arrayType()),
-                              AccessFlags.ofMethod(AccessFlag.STATIC, AccessFlag.PUBLIC).flagsMask(),
-                              mb -> mb.withCode(c0 -> {
-                                  jdk.internal.classfile.Label loopTop = c0.newLabel();
-                                  jdk.internal.classfile.Label loopEnd = c0.newLabel();
-                                  int vFac = 1;
-                                  int vI = 2;
-                                  c0.constantInstruction(ICONST_1, 1)        // 0
-                                    .storeInstruction(IntType, 1)          // 1
-                                    .constantInstruction(ICONST_1, 1)        // 2
-                                    .storeInstruction(IntType, 2)          // 3
-                                    .labelBinding(loopTop)
-                                    .loadInstruction(IntType, 2)           // 4
-                                    .constantInstruction(BIPUSH, 10)         // 5
-                                    .branchInstruction(IF_ICMPGE, loopEnd) // 6
-                                    .loadInstruction(IntType, 1)           // 7
-                                    .loadInstruction(IntType, 2)           // 8
-                                    .operatorInstruction(IMUL)             // 9
-                                    .storeInstruction(IntType, 1)          // 10
-                                    .incrementInstruction(2, 1)    // 11
-                                    .branchInstruction(GOTO, loopTop)     // 12
-                                    .labelBinding(loopEnd)
-                                    .fieldInstruction(GETSTATIC, CD_System, "out", CD_PrintStream)   // 13
-                                    .loadInstruction(IntType, 1)
-                                    .invokeInstruction(INVOKEVIRTUAL, CD_PrintStream, "println", MTD_INT_VOID, false)  // 15
-                                    .returnInstruction(VoidType);
+                                    .getstatic(CD_System, "out", CD_PrintStream) // 13
+                                    .iload(vFac)
+                                    .invokevirtual(CD_PrintStream, "println", MTD_void_int) // 15
+                                    .return_();
                         }));
             }
         });
